<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/place_image_view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/image_view_cd_place"
            android:scaleType="centerCrop"
            tools:src="@drawable/easetrip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/place_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                tools:targetApi="jelly_bean"
                tools:text="@string/place_air_combat_zone" />

            <TextView
                android:id="@+id/place_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                tools:text="@string/place_air_combat_zone_desc" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>